--- a/templates/index.html
+++ b/templates/index.html
@@ -167,13 +167,14 @@
                     <span class="contact__text">My contry</span>
                 </div>
 
-                <form action="" class="contact__form">
+                <form action="{%url 'save_contacts'%}" class="contact__form" method="POST">
+                    {%csrf_token%}
                     <div class="contact__inputs">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
+                        {{contacts.name}}
+                        {{contacts.email}}
                     </div>
 
-                    <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        {{contacts.message}}
 
                     <input type="submit" value="Submit" class="contact__button">
                 </form>
